--- a/BM23/BM23.csproj
+++ b/BM23/BM23.csproj
@@ -80,6 +80,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="MySql.Data" Version="8.0.33" />
 	</ItemGroup>
 
 	<ItemGroup>
